# photo-judge-app

./: .gitignore  Makefile  README.md  pyproject.toml
backend/: README.md  pyproject.toml
backend/app/: crud.py  database.py  graph.py  main.py  models.py  schemas.py
backend/app/api/: deps.py
backend/app/api/routers/: images.py  judging.py  management.py
backend/app/core/: config.py  startup.py
backend/app/crud/: crud.py
backend/app/db/: database.py  models.py  schemas.py
backend/app/services/: guideline_service.py  judging_service.py
frontend/: index.html  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: CompetitionManager.jsx  CriteriaManager.jsx  Header.jsx  HistoryView.jsx  Modals.jsx  PromptManager.jsx  ResultCard.jsx  Sidebar.jsx  UploadView.jsx
src/agent/: graph.py
