[project]
name = "photo-judge"
version = "0.1.0"
dependencies = [
    "aiofiles>=24.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.5.0",
    "pillow>=11.2.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
